gcc/testsuite/gdc.test/compilable/diag3243.d
// REQUIRED_ARGS: -vtls
// PERMUTE_ARGS:
/*
TEST_OUTPUT:
---
---
*/

template T()
{
    static this() {}
}

class C
{
    alias ti = T!();
}

void main() {}
